2006-08-12  Mark D. Baushke  <mdb@gnu.org>

	* add.c: Move include of <assert.h> after cvs.h for fputs rename.
	* base.c: Add include of GNULIB "getline.h" for getline.
	* filesubr.c: Add include of GNULIB "setenv.h" for setenv.
	* server.c: Add include of GNULIB "vaspritnf.h" for vasprintf.
	
2006-07-25  Mark D. Baushke  <mdb@gnu.org>

	* login.c (free_cvs_password): New function to control freeing of
	the static get_cvs_passwd() returned storage.
	(login): Call it.
	* cvs.h (free_cvs_password): Add prototype for it.
	* client.c (auth_server): Call it.
	[Alter the previous NetBSD coverity cid-3404 patch.]
	
2006-07-11  Derek Price  <derek@ximbiot.com>

	* subr.c (isParentPath): New function.
	* subr.h (isParentPath): New proto.
	* client.c (is_arg_a_parent_or_listed_dir): Use new function.

	* server.c (do_cvs_command): Initialize var to suppress warning.

2006-07-11  Larry Jones  <lawrence.jones@ugs.com>

	* log.c (log_usage): Fix misleading description of -b (it selects
	revisions on the default branch *in addition to* revisions selected
	with -r).

2006-07-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (cvs_SOURCES): Add missing header files.

2006-07-05  Derek Price  <derek@ximbiot.com>
	    Mark D. Baushke  <mdb@gnu.org>

	* add.c, checkout.c, client.c, recurse.c: Use new last_component() API.
	* filesubr.c, filesubr.h: Remove original last_component().

	* sanity.sh (abspath-2a.*): Insert `r' to remote test name variants.
	Misc cleanup.

	* subr.c (get_stream): Be slightly more conservative about memory
	allocation.  Comment more fully.

2006-07-03  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh (recase-5si, recase-7si): Fix cases for MacOS X.

2006-07-03  Derek Price  <derek@ximbiot.com>

	* subr.c (get_file): Factor out...
	(get_stream): ...this function.  Simplify.
	* subr.h (get_stream): New proto.
	* sanity.sh: Update to compensate.

2006-06-29  Derek Price  <derek@ximbiot.com>
