@@ -84,12 +84,14 @@ static const char *const loginfo_contents[] = {
 #endif
     "#    %p = path relative to repository\n",
     "#    %r = repository (path portion of $CVSROOT)\n",
-    "#    %{sVv} = attribute list = file name, old version number (pre-checkin),\n",
-    "#           new version number (post-checkin).  When either old or new revision\n",
-    "#           is unknown, doesn't exist, or isn't applicable, the string \"NONE\"\n",
-    "#           will be placed on the command line instead.\n",
+    "#    %{saTVv} = attribute list consisting of:\n",
+    "#         file name, file action, destination tag, old version number\n",
+    "#         (pre-checkin), new version number (post-checkin).  When\n",
+    "#         either old or new revision is unknown, doesn't exist, or\n",
+    "#         isn't applicable, the string \"NONE\", will be placed on the\n",
+    "#         command line instead.\n",
     "#\n",
-    "# Note that %{sVv} is a list operator and not all elements are necessary.\n",
+    "# Note that %{saTVv} is a list operator and not all elements are necessary.\n",
     "# Thus %{sv} is a legal format string, but will only be replaced with\n",
     "# file name and new revision.\n",
     "# It also generates multiple arguments for each file being operated upon.\n",
